--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/EMP_SYSTEM
 spring.datasource.username=root
 spring.datasource.password=capitalization1A
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
-spring.jpba.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql= true
